Erstes PKL Model gespeichert

--- a/src/2. Classical ML Methods/sven/NB_tfidf_new_dataset.ipynb
+++ b/src/2. Classical ML Methods/sven/NB_tfidf_new_dataset.ipynb
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "e5d1b5ff-2a21-4fc2-80d0-0ab9d8cd8671",
    "metadata": {},
    "outputs": [],
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "512a7731-bbeb-4a1a-89f5-eb2b208d84c9",
    "metadata": {},
    "outputs": [],
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "d73a06de-70e1-4076-907b-66d3205c5922",
    "metadata": {},
    "outputs": [],
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "2a198a29-26dc-4c6c-8155-b307c8bd7c16",
    "metadata": {},
    "outputs": [
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "id": "d012c6c6-6df3-4d6d-acf6-c1a0456995f7",
    "metadata": {},
    "outputs": [],
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "id": "9d37edd1-4623-4c6d-af74-07119a2e79ba",
    "metadata": {},
    "outputs": [
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "id": "131f8528-a1a8-43a9-9bf5-f6ee57762b26",
    "metadata": {},
    "outputs": [
@@ -364,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "id": "713516c3-e398-4220-829f-c035d2d4ccdd",
    "metadata": {},
    "outputs": [],
@@ -376,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "id": "d04fa54a-f46a-4b92-9bc8-c2a0733b3077",
    "metadata": {},
    "outputs": [
@@ -400,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "id": "74bd8c26-a5fe-4095-b832-d3264c8f73b5",
    "metadata": {},
    "outputs": [
@@ -516,11 +516,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "id": "9cc543d8-70d3-4d6f-b36a-aeeb8c23559f",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Save NB TFIDF Comp\n",
+    "\n",
+    "import pickle\n",
+    "\n",
+    "# save\n",
+    "with open('saved_models/model_nb_tfidf_comp.pkl','wb') as f:\n",
+    "    pickle.dump(clf_tfidf_comp,f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "2f2529bf-62b2-40d1-a13f-6b9da004766d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Test load\n",
+    "with open('saved_models/model_nb_tfidf_comp.pkl', 'rb') as f:\n",
+    "    clf_test = pickle.load(f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "5f7a31a6-d39e-4682-91e1-327f52d2fc31",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0, 0, 0, ..., 1, 0, 1], dtype=int64)"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "clf_test.predict(X_test_tfidf)"
+   ]
   }
  ],
  "metadata": {
