--- a/src/2. Classical ML Methods/sven/NB_w2v.ipynb
+++ b/src/2. Classical ML Methods/sven/NB_w2v.ipynb
@@ -276,6 +276,7 @@
     "    test_f1 = f1_score(y_test, y_test_pred)\n",
     "\n",
     "    result_dict = {\n",
+    "        'model': 'W2V',\n",
     "        'priors': params['priors'],\n",
     "        'var_smoothing': params['var_smoothing'],\n",
     "        'train_accuracy': train_accuracy,\n",
