--- a/src/2. Classical ML Methods/sven/NB_w2v_mixed_dataset.ipynb
+++ b/src/2. Classical ML Methods/sven/NB_w2v_mixed_dataset.ipynb
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "512a7731-bbeb-4a1a-89f5-eb2b208d84c9",
    "metadata": {},
    "outputs": [],
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "d73a06de-70e1-4076-907b-66d3205c5922",
    "metadata": {},
    "outputs": [],
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "2a198a29-26dc-4c6c-8155-b307c8bd7c16",
    "metadata": {},
    "outputs": [
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "d012c6c6-6df3-4d6d-acf6-c1a0456995f7",
    "metadata": {},
    "outputs": [],
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "9d37edd1-4623-4c6d-af74-07119a2e79ba",
    "metadata": {},
    "outputs": [
@@ -138,13 +138,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 0.6369037929350481\n",
-      "F1 Score: 0.4260903126206098\n",
-      "Recall: 0.7498302014942269\n",
-      "Precision: 0.29760086261119595\n",
+      "Accuracy: 0.6370258831189972\n",
+      "F1 Score: 0.42469199509772304\n",
+      "Recall: 0.7453022413402762\n",
+      "Precision: 0.29695110950748693\n",
       "       0     1\n",
-      "0  12338  7817\n",
-      "1   1105  3312\n"
+      "0  12361  7794\n",
+      "1   1125  3292\n"
      ]
     }
    ],
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "131f8528-a1a8-43a9-9bf5-f6ee57762b26",
    "metadata": {},
    "outputs": [
@@ -163,83 +163,83 @@
      "output_type": "stream",
      "text": [
       "Fitting 3 folds for each of 24 candidates, totalling 72 fits\n",
-      "          priors  var_smoothing  train_accuracy  train_recall  \\\n",
-      "0           None   1.000000e-10        0.649201      0.747967   \n",
-      "1           None   1.000000e-09        0.649201      0.747967   \n",
-      "2           None   1.000000e-02        0.646114      0.752130   \n",
-      "3           None   1.000000e-01        0.623666      0.782823   \n",
-      "4           None   2.500000e-01        0.600241      0.809256   \n",
-      "5           None   5.000000e-01        0.581386      0.826975   \n",
-      "6           None   7.500000e-01        0.576205      0.831042   \n",
-      "7           None   1.000000e+00        0.576606      0.827169   \n",
-      "8   [0.25, 0.75]   1.000000e-10        0.602979      0.802188   \n",
-      "9   [0.25, 0.75]   1.000000e-09        0.602979      0.802188   \n",
-      "10  [0.25, 0.75]   1.000000e-02        0.598619      0.807901   \n",
-      "11  [0.25, 0.75]   1.000000e-01        0.567257      0.841983   \n",
-      "12  [0.25, 0.75]   2.500000e-01        0.528850      0.874032   \n",
-      "13  [0.25, 0.75]   5.000000e-01        0.488244      0.902498   \n",
-      "14  [0.25, 0.75]   7.500000e-01        0.463354      0.921379   \n",
-      "15  [0.25, 0.75]   1.000000e+00        0.443871      0.932707   \n",
-      "16    [0.5, 0.5]   1.000000e-10        0.621939      0.780209   \n",
-      "17    [0.5, 0.5]   1.000000e-09        0.621939      0.780209   \n",
-      "18    [0.5, 0.5]   1.000000e-02        0.618764      0.784663   \n",
-      "19    [0.5, 0.5]   1.000000e-01        0.591136      0.818358   \n",
-      "20    [0.5, 0.5]   2.500000e-01        0.558833      0.849923   \n",
-      "21    [0.5, 0.5]   5.000000e-01        0.525518      0.875387   \n",
-      "22    [0.5, 0.5]   7.500000e-01        0.506384      0.886909   \n",
-      "23    [0.5, 0.5]   1.000000e+00        0.494384      0.894946   \n",
+      "   model        priors  var_smoothing  train_accuracy  train_recall  \\\n",
+      "0    W2V          None   1.000000e-10        0.649480      0.744675   \n",
+      "1    W2V          None   1.000000e-09        0.649480      0.744675   \n",
+      "2    W2V          None   1.000000e-02        0.646951      0.749032   \n",
+      "3    W2V          None   1.000000e-01        0.626317      0.777111   \n",
+      "4    W2V          None   2.500000e-01        0.604218      0.802285   \n",
+      "5    W2V          None   5.000000e-01        0.585973      0.822909   \n",
+      "6    W2V          None   7.500000e-01        0.580008      0.827459   \n",
+      "7    W2V          None   1.000000e+00        0.579798      0.824264   \n",
+      "8    W2V  [0.25, 0.75]   1.000000e-10        0.603729      0.800542   \n",
+      "9    W2V  [0.25, 0.75]   1.000000e-09        0.603729      0.800542   \n",
+      "10   W2V  [0.25, 0.75]   1.000000e-02        0.600049      0.805480   \n",
+      "11   W2V  [0.25, 0.75]   1.000000e-01        0.570711      0.837820   \n",
+      "12   W2V  [0.25, 0.75]   2.500000e-01        0.534867      0.870740   \n",
+      "13   W2V  [0.25, 0.75]   5.000000e-01        0.496058      0.898431   \n",
+      "14   W2V  [0.25, 0.75]   7.500000e-01        0.471133      0.917119   \n",
+      "15   W2V  [0.25, 0.75]   1.000000e+00        0.452505      0.929996   \n",
+      "16   W2V    [0.5, 0.5]   1.000000e-10        0.623421      0.779435   \n",
+      "17   W2V    [0.5, 0.5]   1.000000e-09        0.623421      0.779435   \n",
+      "18   W2V    [0.5, 0.5]   1.000000e-02        0.620282      0.783501   \n",
+      "19   W2V    [0.5, 0.5]   1.000000e-01        0.594223      0.814775   \n",
+      "20   W2V    [0.5, 0.5]   2.500000e-01        0.564083      0.844888   \n",
+      "21   W2V    [0.5, 0.5]   5.000000e-01        0.531989      0.870740   \n",
+      "22   W2V    [0.5, 0.5]   7.500000e-01        0.513326      0.883424   \n",
+      "23   W2V    [0.5, 0.5]   1.000000e+00        0.501517      0.892138   \n",
       "\n",
       "    train_precision  train_f1  test_accuracy  test_recall  test_precision  \\\n",
-      "0          0.306135  0.434453       0.636904     0.749830        0.297601   \n",
-      "1          0.306135  0.434453       0.636904     0.749830        0.297601   \n",
-      "2          0.304663  0.433664       0.633282     0.754811        0.296040   \n",
-      "3          0.294879  0.428390       0.611346     0.781752        0.286818   \n",
-      "4          0.285188  0.421748       0.589533     0.807788        0.278641   \n",
-      "5          0.277720  0.415803       0.572237     0.825900        0.272442   \n",
-      "6          0.275670  0.414008       0.566661     0.827485        0.269921   \n",
-      "7          0.275296  0.413104       0.568777     0.823636        0.270383   \n",
-      "8          0.285650  0.421285       0.589533     0.806656        0.278468   \n",
-      "9          0.285650  0.421285       0.589533     0.806656        0.278468   \n",
-      "10         0.284080  0.420353       0.584812     0.809599        0.276416   \n",
-      "11         0.272824  0.412113       0.554778     0.844238        0.266719   \n",
-      "12         0.259860  0.400612       0.517988     0.877745        0.255385   \n",
-      "13         0.247543  0.388521       0.481280     0.906498        0.245088   \n",
-      "14         0.241088  0.382176       0.456048     0.922345        0.238287   \n",
-      "15         0.235976  0.376657       0.436961     0.934797        0.233594   \n",
-      "16         0.293413  0.426451       0.608782     0.783564        0.285608   \n",
-      "17         0.293413  0.426451       0.608782     0.783564        0.285608   \n",
-      "18         0.292173  0.425798       0.605608     0.788771        0.284594   \n",
-      "19         0.281574  0.418986       0.577690     0.820919        0.274447   \n",
-      "20         0.269918  0.409718       0.547005     0.849219        0.263858   \n",
-      "21         0.258632  0.399293       0.516401     0.873444        0.254117   \n",
-      "22         0.252397  0.392964       0.499308     0.890650        0.249714   \n",
-      "23         0.248829  0.389392       0.487791     0.898800        0.246446   \n",
+      "0          0.305805  0.433564       0.637026     0.745302        0.296951   \n",
+      "1          0.305805  0.433564       0.637026     0.745302        0.296951   \n",
+      "2          0.304747  0.433232       0.634991     0.750057        0.296386   \n",
+      "3          0.295639  0.428327       0.615375     0.779941        0.288913   \n",
+      "4          0.286366  0.422077       0.594416     0.804619        0.280793   \n",
+      "5          0.279508  0.417282       0.577120     0.822730        0.274430   \n",
+      "6          0.277081  0.415147       0.571504     0.828390        0.272450   \n",
+      "7          0.276495  0.414087       0.571993     0.824089        0.272048   \n",
+      "8          0.285823  0.421246       0.589940     0.803713        0.278235   \n",
+      "9          0.285823  0.421246       0.589940     0.803713        0.278235   \n",
+      "10         0.284508  0.420491       0.587091     0.809826        0.277653   \n",
+      "11         0.273916  0.412854       0.560109     0.843559        0.269142   \n",
+      "12         0.261996  0.402795       0.524215     0.875707        0.257695   \n",
+      "13         0.249960  0.391106       0.486733     0.903554        0.246708   \n",
+      "14         0.243265  0.384533       0.463495     0.921893        0.240804   \n",
+      "15         0.238509  0.379652       0.444775     0.934571        0.236129   \n",
+      "16         0.294204  0.427169       0.609556     0.778356        0.285240   \n",
+      "17         0.294204  0.427169       0.609556     0.778356        0.285240   \n",
+      "18         0.292912  0.426411       0.606585     0.783790        0.284377   \n",
+      "19         0.282705  0.419764       0.583143     0.818202        0.276850   \n",
+      "20         0.271703  0.411177       0.554086     0.849672        0.267194   \n",
+      "21         0.260742  0.401312       0.522749     0.874349        0.256884   \n",
+      "22         0.254704  0.395406       0.506959     0.887480        0.252285   \n",
+      "23         0.251206  0.392027       0.495279     0.895178        0.248789   \n",
       "\n",
       "     test_f1  \n",
-      "0   0.426090  \n",
-      "1   0.426090  \n",
-      "2   0.425282  \n",
-      "3   0.419665  \n",
-      "4   0.414354  \n",
-      "5   0.409727  \n",
-      "6   0.407061  \n",
-      "7   0.407117  \n",
-      "8   0.414013  \n",
-      "9   0.414013  \n",
-      "10  0.412124  \n",
-      "11  0.405370  \n",
-      "12  0.395653  \n",
-      "13  0.385853  \n",
-      "14  0.378730  \n",
-      "15  0.373784  \n",
-      "16  0.418627  \n",
-      "17  0.418627  \n",
-      "18  0.418272  \n",
-      "19  0.411368  \n",
-      "20  0.402619  \n",
-      "21  0.393694  \n",
-      "22  0.390065  \n",
-      "23  0.386826  \n"
+      "0   0.424692  \n",
+      "1   0.424692  \n",
+      "2   0.424880  \n",
+      "3   0.421639  \n",
+      "4   0.416305  \n",
+      "5   0.411575  \n",
+      "6   0.410041  \n",
+      "7   0.409058  \n",
+      "8   0.413367  \n",
+      "9   0.413367  \n",
+      "10  0.413526  \n",
+      "11  0.408083  \n",
+      "12  0.398209  \n",
+      "13  0.387589  \n",
+      "14  0.381863  \n",
+      "15  0.377004  \n",
+      "16  0.417486  \n",
+      "17  0.417486  \n",
+      "18  0.417335  \n",
+      "19  0.413714  \n",
+      "20  0.406543  \n",
+      "21  0.397100  \n",
+      "22  0.392884  \n",
+      "23  0.389365  \n"
      ]
     }
    ],
@@ -276,6 +276,7 @@
     "    test_f1 = f1_score(y_test, y_test_pred)\n",
     "\n",
     "    result_dict = {\n",
+    "        'model': 'W2V',\n",
     "        'priors': params['priors'],\n",
     "        'var_smoothing': params['var_smoothing'],\n",
     "        'train_accuracy': train_accuracy,\n",
@@ -296,6 +297,14 @@
     "\n",
     "print(results_df)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5d23d991-89fb-4f58-8b17-0ae489e9d8c8",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
