--- a/src/2. Classical ML Methods/sven/NB_w2v_new_dataset.ipynb
+++ b/src/2. Classical ML Methods/sven/NB_w2v_new_dataset.ipynb
@@ -138,13 +138,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 0.7271737947545979\n",
-      "F1 Score: 0.47464375523889357\n",
-      "Recall: 0.5779535595815259\n",
-      "Precision: 0.4026666666666667\n",
+      "Accuracy: 0.7317988899771466\n",
+      "F1 Score: 0.47669603991931203\n",
+      "Recall: 0.5728502168920643\n",
+      "Precision: 0.4081818181818182\n",
       "       0     1\n",
-      "0  11099  3360\n",
-      "1   1654  2265\n"
+      "0  11204  3255\n",
+      "1   1674  2245\n"
      ]
     }
    ],
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "131f8528-a1a8-43a9-9bf5-f6ee57762b26",
    "metadata": {},
    "outputs": [
@@ -162,7 +162,84 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Fitting 3 folds for each of 24 candidates, totalling 72 fits\n"
+      "Fitting 3 folds for each of 24 candidates, totalling 72 fits\n",
+      "   model        priors  var_smoothing  train_accuracy  train_recall  \\\n",
+      "0    W2V          None   1.000000e-10        0.731244      0.584930   \n",
+      "1    W2V          None   1.000000e-09        0.731244      0.584930   \n",
+      "2    W2V          None   1.000000e-02        0.730964      0.583079   \n",
+      "3    W2V          None   1.000000e-01        0.730941      0.575675   \n",
+      "4    W2V          None   2.500000e-01        0.733972      0.556402   \n",
+      "5    W2V          None   5.000000e-01        0.739360      0.520035   \n",
+      "6    W2V          None   7.500000e-01        0.746916      0.485845   \n",
+      "7    W2V          None   1.000000e+00        0.753073      0.446320   \n",
+      "8    W2V  [0.25, 0.75]   1.000000e-10        0.677954      0.697735   \n",
+      "9    W2V  [0.25, 0.75]   1.000000e-09        0.677954      0.697735   \n",
+      "10   W2V  [0.25, 0.75]   1.000000e-02        0.676158      0.699260   \n",
+      "11   W2V  [0.25, 0.75]   1.000000e-01        0.664241      0.715483   \n",
+      "12   W2V  [0.25, 0.75]   2.500000e-01        0.649082      0.737260   \n",
+      "13   W2V  [0.25, 0.75]   5.000000e-01        0.625341      0.763611   \n",
+      "14   W2V  [0.25, 0.75]   7.500000e-01        0.604981      0.787021   \n",
+      "15   W2V  [0.25, 0.75]   1.000000e+00        0.585298      0.809560   \n",
+      "16   W2V    [0.5, 0.5]   1.000000e-10        0.704098      0.647321   \n",
+      "17   W2V    [0.5, 0.5]   1.000000e-09        0.704098      0.647321   \n",
+      "18   W2V    [0.5, 0.5]   1.000000e-02        0.703421      0.647866   \n",
+      "19   W2V    [0.5, 0.5]   1.000000e-01        0.698104      0.652221   \n",
+      "20   W2V    [0.5, 0.5]   2.500000e-01        0.693580      0.658537   \n",
+      "21   W2V    [0.5, 0.5]   5.000000e-01        0.688659      0.659299   \n",
+      "22   W2V    [0.5, 0.5]   7.500000e-01        0.686933      0.660497   \n",
+      "23   W2V    [0.5, 0.5]   1.000000e+00        0.685370      0.660170   \n",
+      "\n",
+      "    train_precision  train_f1  test_accuracy  test_recall  test_precision  \\\n",
+      "0          0.410578  0.482486       0.731799     0.572850        0.408182   \n",
+      "1          0.410578  0.482486       0.731799     0.572850        0.408182   \n",
+      "2          0.409968  0.481435       0.731527     0.571574        0.407643   \n",
+      "3          0.408989  0.478224       0.731092     0.561878        0.405749   \n",
+      "4          0.410673  0.472557       0.734084     0.540954        0.407066   \n",
+      "5          0.413721  0.460826       0.740559     0.502169        0.411285   \n",
+      "6          0.421261  0.451254       0.748504     0.470018        0.419877   \n",
+      "7          0.426890  0.436389       0.755142     0.435315        0.427248   \n",
+      "8          0.367410  0.481352       0.677277     0.695075        0.365147   \n",
+      "9          0.367410  0.481352       0.677277     0.695075        0.365147   \n",
+      "10         0.366009  0.480509       0.675645     0.696606        0.363903   \n",
+      "11         0.357995  0.477214       0.663402     0.713702        0.355807   \n",
+      "12         0.348931  0.473679       0.647894     0.734881        0.346487   \n",
+      "13         0.335438  0.466119       0.627272     0.764991        0.335835   \n",
+      "14         0.325439  0.460470       0.604908     0.793059        0.325173   \n",
+      "15         0.316814  0.455409       0.584177     0.812197        0.315492   \n",
+      "16         0.386189  0.483766       0.702797     0.638173        0.382124   \n",
+      "17         0.386189  0.483766       0.702797     0.638173        0.382124   \n",
+      "18         0.385537  0.483406       0.702198     0.638683        0.381555   \n",
+      "19         0.380535  0.480642       0.696703     0.642766        0.376363   \n",
+      "20         0.376799  0.479334       0.691370     0.644297        0.371160   \n",
+      "21         0.372020  0.475648       0.686799     0.645318        0.366788   \n",
+      "22         0.370511  0.474722       0.685058     0.643532        0.364820   \n",
+      "23         0.368953  0.473358       0.683643     0.642511        0.363295   \n",
+      "\n",
+      "     test_f1  \n",
+      "0   0.476696  \n",
+      "1   0.476696  \n",
+      "2   0.475887  \n",
+      "3   0.471218  \n",
+      "4   0.464556  \n",
+      "5   0.452206  \n",
+      "6   0.443535  \n",
+      "7   0.431244  \n",
+      "8   0.478777  \n",
+      "9   0.478777  \n",
+      "10  0.478067  \n",
+      "11  0.474873  \n",
+      "12  0.470935  \n",
+      "13  0.466760  \n",
+      "14  0.461230  \n",
+      "15  0.454455  \n",
+      "16  0.478020  \n",
+      "17  0.478020  \n",
+      "18  0.477717  \n",
+      "19  0.474746  \n",
+      "20  0.470994  \n",
+      "21  0.467727  \n",
+      "22  0.465657  \n",
+      "23  0.464147  \n"
      ]
     }
    ],
@@ -199,6 +276,7 @@
     "    test_f1 = f1_score(y_test, y_test_pred)\n",
     "\n",
     "    result_dict = {\n",
+    "        'model': 'W2V',\n",
     "        'priors': params['priors'],\n",
     "        'var_smoothing': params['var_smoothing'],\n",
     "        'train_accuracy': train_accuracy,\n",
