--- a/src/3. Deep Learning Approach/nasiba/RNN-LSTM_mixed_dataset_all.ipynb
+++ b/src/3. Deep Learning Approach/nasiba/RNN-LSTM_mixed_dataset_all.ipynb
@@ -162,7 +162,7 @@
    ],
    "source": [
     "\n",
-    "source_filepath_name = os.path.abspath(os.path.join(src_path, 'data/new_datasets/train_cleaned.csv'))\n",
+    "source_filepath_name = os.path.abspath(os.path.join(src_path, 'data/mixed_dataset/train_cleaned.csv'))\n",
     "\n",
     "df_cleaned = pd.read_csv(source_filepath_name, encoding='utf-8', index_col=0)\n",
     "df_cleaned.head(1)"
@@ -1011,13 +1011,7 @@
       "Epoch 4/10\n",
       "\u001b[1m442/442\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m31s\u001b[0m 71ms/step - accuracy: 0.9324 - loss: 0.2519 - val_accuracy: 0.9394 - val_loss: 0.2300\n",
       "Epoch 5/10\n",
-      "\u001b[1m442/442\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m31s\u001b[0m 71ms/step - accuracy: 0.9312 - loss: 0.2531 - val_accuracy: 0.9394 - val_loss: 0.2287\n",
-      "Epoch 6/10\n",
-      "\u001b[1m442/442\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m31s\u001b[0m 70ms/step - accuracy: 0.9323 - loss: 0.2499 - val_accuracy: 0.9394 - val_loss: 0.2301\n",
-      "Epoch 7/10\n",
-      "\u001b[1m442/442\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m32s\u001b[0m 72ms/step - accuracy: 0.9306 - loss: 0.2555 - val_accuracy: 0.9394 - val_loss: 0.2287\n",
-      "Epoch 8/10\n",
-      "\u001b[1m286/442\u001b[0m \u001b[32m━━━━━━━━━━━━\u001b[0m\u001b[37m━━━━━━━━\u001b[0m \u001b[1m9s\u001b[0m 64ms/step - accuracy: 0.9318 - loss: 0.2517 "
+      "\u001b[1m 12/442\u001b[0m \u001b[37m━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[1m25s\u001b[0m 59ms/step - accuracy: 0.9383 - loss: 0.2340"
      ]
     }
    ],
