--- a/src/2. Classical ML Methods/sven/NB_w2v_mixed_dataset.ipynb
+++ b/src/2. Classical ML Methods/sven/NB_w2v_mixed_dataset.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "f636600b-8b3e-4bba-9b02-5f3733f11b4d",
    "metadata": {},
    "outputs": [],
@@ -39,7 +39,8 @@
     "    print(\"F1 Score:\", f1)\n",
     "    print(\"Recall:\", recall)\n",
     "    print(\"Precision:\", precision)\n",
-    "    print(pd.DataFrame(confusion_matrix(y_test, y_pred)))"
+    "    print(pd.DataFrame(confusion_matrix(y_test, y_pred)))\n",
+    "    print(classification_report(y_test, y_pred))"
    ]
   },
   {
@@ -52,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "e5d1b5ff-2a21-4fc2-80d0-0ab9d8cd8671",
    "metadata": {},
    "outputs": [],
@@ -62,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "512a7731-bbeb-4a1a-89f5-eb2b208d84c9",
    "metadata": {},
    "outputs": [],
@@ -73,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "d73a06de-70e1-4076-907b-66d3205c5922",
    "metadata": {},
    "outputs": [],
@@ -84,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "2a198a29-26dc-4c6c-8155-b307c8bd7c16",
    "metadata": {},
    "outputs": [
