rnn lstm adapted

--- a/src/3. Deep Learning Approach/nasiba/RNN-LSTM_mixed_dataset.ipynb
+++ b/src/3. Deep Learning Approach/nasiba/RNN-LSTM_mixed_dataset.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -20,7 +20,7 @@
        "WindowsPath('C:/Users/Nasiba/Documents/1 Master Data Science/Projektpraktikum/WebScience24')"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -143,7 +143,7 @@
        "140232  __trade_mark__  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -170,15 +170,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "15300\n",
-      "16413\n"
+      "0\n",
+      "0\n"
      ]
     }
    ],
@@ -199,18 +199,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "df_cleaned_wth_duplicates = df_cleaned_test.drop_duplicates()\n",
     "\n",
-    "df_cleaned_wth_duplicates  = df_cleaned_wth_duplicates .drop_duplicates(subset=['tweet'])"
+    "df_cleaned_wth_duplicates  = df_cleaned_wth_duplicates.drop_duplicates(subset=['tweet'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -223,7 +223,98 @@
    ],
    "source": [
     "\n",
-    "print(df_cleaned_wth_duplicates .duplicated(subset=['tweet']).sum())"
+    "print(df_cleaned_wth_duplicates.duplicated(subset=['tweet']).sum())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_cleaned_test = df_cleaned_test.drop_duplicates()\n",
+    "\n",
+    "df_cleaned_test  = df_cleaned_test.drop_duplicates(subset=['tweet'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'C:\\\\Users\\\\Nasiba\\\\Documents\\\\1 Master Data Science\\\\Projektpraktikum\\\\WebScience24\\\\data\\\\mixed_dataset\\\\test_cleaned.csv'"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "target_filepath_name_test = os.path.abspath(os.path.join(src_path, 'data/mixed_dataset/test_cleaned.csv'))\n",
+    "target_filepath_name_test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "target_filepath_name_test = os.path.abspath(os.path.join(src_path, 'data/mixed_dataset/test_cleaned.csv'))\n",
+    "df_cleaned_test.to_csv(target_filepath_name_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "source_filepath_name_test_csv = os.path.abspath(os.path.join(src_path, 'data/mixed_dataset/test.csv'))\n",
+    "\n",
+    "\n",
+    "df_cleaned_test_csv = pd.read_csv(source_filepath_name_test_csv, encoding='utf-8', index_col=0)\n",
+    "anzahl_duplikate = df_cleaned_test_csv.duplicated().sum()\n",
+    "print(anzahl_duplikate)\n",
+    "\n",
+    "print(df_cleaned_test_csv.duplicated(subset=['tweet']).sum())\n",
+    "duplikate = df_cleaned_test_csv[df_cleaned_test_csv.duplicated()]\n",
+    "# df_cleaned_test_csv = df_cleaned_test_csv.drop_duplicates()\n",
+    "\n",
+    "# df_cleaned_test_csv = df_cleaned_test_csv.drop_duplicates(subset=['tweet'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Nasiba\\Documents\\1 Master Data Science\\Projektpraktikum\\WebScience24\\data\\mixed_dataset\\test.csv\n"
+     ]
+    }
+   ],
+   "source": [
+    "target_filepath_name_test_rnn = os.path.abspath(os.path.join(src_path, 'data/mixed_dataset/test.csv'))\n",
+    "\n",
+    "print(target_filepath_name_test_rnn )\n",
+    "df_cleaned_test_csv.to_csv(target_filepath_name_test_rnn)"
    ]
   },
   {
