weitere Zusammenführungen finales Ensemble-Notebook

--- a/src/2. Classical ML Methods/chris/alt/ensemble_models_training_mixeddata_rnn.ipynb
+++ b/src/2. Classical ML Methods/chris/alt/ensemble_models_training_mixeddata_rnn.ipynb
@@ -36,8 +36,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-02-09T11:29:27.238300300Z",
-     "start_time": "2025-02-09T11:29:10.090363700Z"
+     "end_time": "2025-01-31T11:39:06.474736300Z",
+     "start_time": "2025-01-31T11:39:00.078758800Z"
     }
    }
   },
@@ -74,8 +74,7 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-02-09T11:29:27.246307400Z",
-     "start_time": "2025-02-09T11:29:27.239300700Z"
+     "start_time": "2025-01-31T11:39:06.475737200Z"
     }
    }
   },
@@ -92,14 +91,13 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-02-09T11:29:27.246307400Z",
-     "start_time": "2025-02-09T11:29:27.239300700Z"
+     "start_time": "2025-01-31T11:39:06.475737200Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "outputs": [],
    "source": [
     "def add_to_eval_df(model, model_name, tuning, vec_variant, x_data_train, y_data_train, x_data_test, y_data_test):\n",
@@ -120,13 +118,13 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2025-02-09T11:27:55.114908200Z"
+     "start_time": "2025-01-31T11:39:06.475737200Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "outputs": [],
    "source": [
     "def evaluate_model(model, x_test, y_test):\n",
@@ -159,7 +157,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2025-02-09T11:27:55.117910900Z"
+     "end_time": "2025-01-19T12:36:37.779005Z",
+     "start_time": "2025-01-19T12:36:37.778004200Z"
     }
    }
   },
@@ -174,28 +173,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'pd' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[1;31mNameError\u001B[0m                                 Traceback (most recent call last)",
-      "Cell \u001B[1;32mIn[3], line 1\u001B[0m\n\u001B[1;32m----> 1\u001B[0m df_train_cleaned \u001B[38;5;241m=\u001B[39m \u001B[43mpd\u001B[49m\u001B[38;5;241m.\u001B[39mread_csv(\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124m..\u001B[39m\u001B[38;5;130;01m\\\\\u001B[39;00m\u001B[38;5;124m..\u001B[39m\u001B[38;5;130;01m\\\\\u001B[39;00m\u001B[38;5;124m..\u001B[39m\u001B[38;5;130;01m\\\\\u001B[39;00m\u001B[38;5;124mdata\u001B[39m\u001B[38;5;130;01m\\\\\u001B[39;00m\u001B[38;5;124mmixed_dataset\u001B[39m\u001B[38;5;130;01m\\\\\u001B[39;00m\u001B[38;5;124mtrain_cleaned.csv\u001B[39m\u001B[38;5;124m\"\u001B[39m)\n",
-      "\u001B[1;31mNameError\u001B[0m: name 'pd' is not defined"
-     ]
-    }
-   ],
+   "execution_count": 6,
+   "outputs": [],
    "source": [
-    "df_train_cleaned = pd.read_csv(\"..\\\\..\\\\..\\\\data\\\\mixed_dataset\\\\train_cleaned.csv\")"
+    "df_train_cleaned = pd.read_csv(\"..\\\\..\\\\..\\\\data\\\\mixed_dataset\\\\train_cleaned_rnn.csv\")"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-02-09T11:28:19.708260400Z",
-     "start_time": "2025-02-09T11:28:19.647737200Z"
+     "end_time": "2025-01-19T12:36:38.326504100Z",
+     "start_time": "2025-01-19T12:36:37.779005Z"
     }
    }
   },
@@ -260,20 +247,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'df_train_cleaned' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[1;31mNameError\u001B[0m                                 Traceback (most recent call last)",
-      "Cell \u001B[1;32mIn[5], line 1\u001B[0m\n\u001B[1;32m----> 1\u001B[0m X_train_w2v, X_test_w2v, y_train_w2v, y_test_w2v \u001B[38;5;241m=\u001B[39m vectorize_w2v(df\u001B[38;5;241m=\u001B[39m\u001B[43mdf_train_cleaned\u001B[49m,\n\u001B[0;32m      2\u001B[0m                                                                  text_column\u001B[38;5;241m=\u001B[39m\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mtweet_cleaned\u001B[39m\u001B[38;5;124m\"\u001B[39m,\n\u001B[0;32m      3\u001B[0m                                                                  label_column\u001B[38;5;241m=\u001B[39m\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mlabel\u001B[39m\u001B[38;5;124m\"\u001B[39m)\n",
-      "\u001B[1;31mNameError\u001B[0m: name 'df_train_cleaned' is not defined"
-     ]
-    }
-   ],
+   "execution_count": 9,
+   "outputs": [],
    "source": [
     "X_train_w2v, X_test_w2v, y_train_w2v, y_test_w2v = vectorize_w2v(df=df_train_cleaned,\n",
     "                                                                 text_column=\"tweet_cleaned\",\n",
@@ -282,8 +257,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-01-31T12:17:24.528513100Z",
-     "start_time": "2025-01-31T12:17:23.471476600Z"
+     "end_time": "2025-01-19T12:37:52.497249400Z",
+     "start_time": "2025-01-19T12:36:38.356531200Z"
     }
    }
   },
@@ -3476,7 +3451,7 @@
    "execution_count": 63,
    "outputs": [],
    "source": [
-    "evaluation.to_csv(\"eval/evaluation_mixeddata.csv\")"
+    "evaluation.to_csv(\"eval/evaluation_mixeddata_rnn.csv\")"
    ],
    "metadata": {
     "collapsed": false,
