--- a/src/2. Classical ML Methods/elena/SVM_w2v_grid_mixed.ipynb
+++ b/src/2. Classical ML Methods/elena/SVM_w2v_grid_mixed.ipynb
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -210,14 +210,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Fitting 2 folds for each of 10 candidates, totalling 20 fits\n"
+      "Fitting 2 folds for each of 10 candidates, totalling 20 fits\n",
+      "Test Classification Report:\n",
+      "{'0': {'precision': 0.6664289632473944, 'recall': 0.4962624075813897, 'f1-score': 0.5688932593477091, 'support': 24481}, '1': {'precision': 0.22852674382233343, 'recall': 0.37528251489624, 'f1-score': 0.2840701426960613, 'support': 9734}, 'accuracy': 0.4618442203711822, 'macro avg': {'precision': 0.4474778535348639, 'recall': 0.43577246123881486, 'f1-score': 0.4264817010218852, 'support': 34215}, 'weighted avg': {'precision': 0.5418479255772631, 'recall': 0.4618442203711822, 'f1-score': 0.4878624770157746, 'support': 34215}}\n"
      ]
     }
    ],
@@ -288,9 +290,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fitting 2 folds for each of 10 candidates, totalling 20 fits\n",
+      "Test Classification Report:\n",
+      "{'0': {'precision': 0.7059746885117237, 'recall': 0.293942240921531, 'f1-score': 0.41506604372152045, 'support': 24481}, '1': {'precision': 0.2804512530180668, 'recall': 0.6921101294431888, 'f1-score': 0.39915866808863615, 'support': 9734}, 'accuracy': 0.40721905596960395, 'macro avg': {'precision': 0.49321297076489523, 'recall': 0.4930261851823599, 'f1-score': 0.4071123559050783, 'support': 34215}, 'weighted avg': {'precision': 0.5849153542695711, 'recall': 0.40721905596960395, 'f1-score': 0.4105404732287396, 'support': 34215}}\n"
+     ]
+    }
+   ],
    "source": [
     "# Hyperparameter search for SVC-model\n",
     "param_dist = {\n",
@@ -359,9 +371,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fitting 2 folds for each of 10 candidates, totalling 20 fits\n",
+      "Test Classification Report:\n",
+      "{'0': {'precision': 0.7177775128174556, 'recall': 0.9836199501654345, 'f1-score': 0.8299298626548794, 'support': 24481}, '1': {'precision': 0.3988005997001499, 'recall': 0.027326895418122048, 'f1-score': 0.05114892798769349, 'support': 9734}, 'accuracy': 0.71155925763554, 'macro avg': {'precision': 0.5582890562588028, 'recall': 0.5054734227917782, 'f1-score': 0.4405393953212865, 'support': 34215}, 'weighted avg': {'precision': 0.6270301425914186, 'recall': 0.71155925763554, 'f1-score': 0.6083704992747716, 'support': 34215}}\n"
+     ]
+    }
+   ],
    "source": [
     "# Hyperparameter search for SVC-model\n",
     "param_dist = {\n",
@@ -427,13 +449,6 @@
     "classification_report_df = pd.DataFrame(test_report).transpose()\n",
     "classification_report_df.to_csv(\"svm_w2v_rbf_classification_report_opt.csv\", index=True)\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
