--- a/src/2. Classical ML Methods/sven/tweet_classification_old_and_new_models.ipynb
+++ b/src/2. Classical ML Methods/sven/tweet_classification_old_and_new_models.ipynb
@@ -2525,7 +2525,9 @@
    "cell_type": "code",
    "execution_count": 62,
    "id": "7123dfa6-5442-44d2-86dd-757bb155dbcc",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
