Cleaned up LSTM Code

--- a/src/3. Deep Learning Approach/nasiba/Training/Manuel_Labeln/Predicten/RNN-LSTM_mixed_dataset_rnn_predict.ipynb
+++ b/src/3. Deep Learning Approach/nasiba/Training/Manuel_Labeln/Predicten/RNN-LSTM_mixed_dataset_rnn_predict.ipynb
@@ -822,10 +822,30 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "matches = (df_predictions_17['label_manual'] == df_predictions_17['predicted_label']).sum()\n",
+    "total = len(df_predictions_17)\n",
+    "\n",
+    "# Prozentsatz der Übereinstimmung\n",
+    "accuracy = (matches / total) * 100\n",
+    "\n",
+    "# Anzahl der nicht übereinstimmenden Werte\n",
+    "mismatches = total - matches\n",
+    "mismatch_percentage = (mismatches / total) * 100\n",
+    "\n",
+    "print(f\"Übereinstimmung: {accuracy:.2f}% ({matches} von {total})\")\n",
+    "print(f\"Nicht übereinstimmend: {mismatch_percentage:.2f}% ({mismatches} von {total})\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Modell speichern"
+    "Labeled Daten speichern"
    ]
   },
   {
