Data exploration Anteil Hate Speech

--- a/src/1. Explorative Analysis & Preprocessing/nasiba/notebooks/1_2_explore_data.ipynb
+++ b/src/1. Explorative Analysis & Preprocessing/nasiba/notebooks/1_2_explore_data.ipynb
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,6 +206,40 @@
     "print(df_cleaned.tweet.count() - df_origin.tweet.count())\n",
     "print(\"Anteil der entfernten Datensätze während Cleaning\")\n",
     "print((df_cleaned.tweet.count() / df_origin.tweet.count() - 1) * 100)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "id               1331\n",
+      "label            1331\n",
+      "tweet            1331\n",
+      "tweet_cleaned    1331\n",
+      "user_handle      1331\n",
+      "hashtags         1331\n",
+      "emojis             74\n",
+      "dtype: int64\n",
+      "id               18848\n",
+      "label            18848\n",
+      "tweet            18848\n",
+      "tweet_cleaned    18847\n",
+      "user_handle      18848\n",
+      "hashtags         18848\n",
+      "emojis            4231\n",
+      "dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "print(df_cleaned[df_cleaned['label']== 1].count())\n",
+    "print(df_cleaned[df_cleaned['label'] == 0].count())\n"
    ]
   },
   {
