Daten nochmal vereinheitlicht und in webapp eingebunden

--- a/src/4. Evaluation/01_evaluation_prediction.ipynb
+++ b/src/4. Evaluation/01_evaluation_prediction.ipynb
@@ -2864,6 +2864,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Prediction start.\n",
+      "Prediction finished.\n",
+      "Total Prediction took 1:19:42 (h:mm:ss)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Truncation was not explicitly activated but `max_length` is provided a specific value, please use `truncation=True` to explicitly truncate examples to max length. Defaulting to 'longest_first' truncation strategy. If you encode pairs of sequences (GLUE-style) with the tokenizer you can select this strategy more precisely by providing a specific strategy to `truncation`.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "Prediction start.\n"
      ]
     }
