Manuell gelabelte Daten dedupliziert

--- a/data/manual_labeled/manual_labeling_fusion.ipynb
+++ b/data/manual_labeled/manual_labeling_fusion.ipynb
@@ -383,21 +383,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2025-03-15T11:52:54.335029Z",
+     "start_time": "2025-03-15T11:52:54.306003Z"
+    }
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "df = df[~df.tweet.duplicated()]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2025-03-15T11:53:06.172704400Z",
+     "start_time": "2025-03-15T11:53:06.138287600Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "df.to_csv(\"manual_labeled_group.csv\")"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "outputs": [],
+   "source": [],
    "metadata": {
     "collapsed": false
-   },
-   "outputs": [],
-   "source": []
+   }
   }
  ],
  "metadata": {
