cleaning up svm

--- a/src/2. Classical ML Methods/elena/1_original_data/w2v/SVM_w2v_grid_original_data.ipynb
+++ b/src/2. Classical ML Methods/elena/1_original_data/w2v/SVM_w2v_grid_original_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -27,9 +27,7 @@
     "import nltk\n",
     "from nltk.tokenize import word_tokenize\n",
     "nltk.download('punkt_tab')\n",
-    "from sklearn.metrics import matthews_corrcoef\n",
-    "\n",
-    "#import vectorize_functions\n"
+    "from sklearn.metrics import matthews_corrcoef\n"
    ]
   },
   {
@@ -437,7 +435,7 @@
     "\n",
     "param_grid = {\n",
     "    'kernel': ['sigmoid'],\n",
-    "    # 'degree': [3, 4, 5],  # degree is only relevant for poly kernels\n",
+    "    # 'degree': [3, 4, 5], \n",
     "    'C': [0.01, 0.1, 1],\n",
     "    'gamma': [0.01, 0.1, 1],\n",
     "    'random_state': [40, 42, 44],\n",
