--- a/src/2. Classical ML Methods/elena/1_original_data/glove/SVM_glove_grid_original_data.ipynb
+++ b/src/2. Classical ML Methods/elena/1_original_data/glove/SVM_glove_grid_original_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,9 +14,7 @@
     "from sklearn.model_selection import GridSearchCV, train_test_split, cross_val_score\n",
     "from sklearn.datasets import make_classification\n",
     "import joblib\n",
-    "from sklearn.metrics import matthews_corrcoef\n",
-    "\n",
-    "\n"
+    "from sklearn.metrics import matthews_corrcoef"
    ]
   },
   {
@@ -123,35 +121,6 @@
     "\n",
     "print(\"X_test shape\", X_test.shape)\n",
     "print(\"y_test shape\", y_test.shape)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "vectorize_glove_test_data() missing 1 required positional argument: 'glove_path'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[18], line 8\u001b[0m\n\u001b[0;32m      5\u001b[0m X_test \u001b[38;5;241m=\u001b[39m df_cleaned_test[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mtweet_cleaned\u001b[39m\u001b[38;5;124m'\u001b[39m] \n\u001b[0;32m      6\u001b[0m y_test \u001b[38;5;241m=\u001b[39m df_cleaned_test[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mlabel\u001b[39m\u001b[38;5;124m'\u001b[39m] \n\u001b[1;32m----> 8\u001b[0m X_test, y_test, glv_mode \u001b[38;5;241m=\u001b[39m \u001b[43mvectorize_glove_test_data\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdf\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mdf_cleaned\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtext_column\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mtweet_cleaned\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\n\u001b[0;32m      9\u001b[0m \u001b[43m                                                                                 \u001b[49m\u001b[43mlabel_column\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mlabel\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n",
-      "\u001b[1;31mTypeError\u001b[0m: vectorize_glove_test_data() missing 1 required positional argument: 'glove_path'"
-     ]
-    }
-   ],
-   "source": [
-    "# # Load and vectorize test data\n",
-    "# filepath_name = (('../../../../../data/twitter_hate-speech/test_cleaned.csv'))\n",
-    "# df_cleaned_test = pd.read_csv(filepath_name, encoding='utf-8')\n",
-    "\n",
-    "# X_test = df_cleaned_test['tweet_cleaned'] \n",
-    "# y_test = df_cleaned_test['label'] \n",
-    "\n",
-    "# X_test, y_test, glv_mode = vectorize_glove_test_data(df=df_cleaned, text_column='tweet_cleaned', \n",
-    "#                                                                                  label_column=\"label\")"
    ]
   },
   {
